Add Bootstrap along with a stylesheet.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <html>
 <head>
 <title>protectagainstcorona.net</title>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <!-- Bootstrap CSS -->
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+ <!-- MyStyle CSS -->
+ <link rel="stylesheet" type="text/css" href="style.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
-<body style="background-color:rgb(164, 209, 238);">
-<center><h1 style="color:rgb(6, 80, 6);">Protect against Corona</h1>
+<body>
+    
+<div class="jumbotron text-center" style="background-color:rgb(164, 209, 238);">
+    <h1>Protect against Corona</h1>
     <img src="./covid.png" alt="COVID-19 Image" width="240" height="240">
-    <h2 style="color:rgb(196, 95, 0);">COVID-19 Resources</h2>
+    <h2>COVID-19 Resources</h2>
     <br>
     <h3>Places to get Masks</h3>
-    <a href="https://www.google.com">Tesco</a>
+    <a href="https://www.google.com" target="_">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
@@ -24,8 +35,7 @@
     <a href="https://www.google.com">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
     <br>
-</center>
-
+</div>
 
 </body>
 </html>
