Add German version, pop-up and top bar.
German version is unfinished, due to only being the English version but having been through google translate. Top bar allows navigation between German and English versions. The pop-up informs you that you could buy the domain, but is not finished.

--- a/indexde.html
+++ b/indexde.html
@@ -19,7 +19,7 @@
     <!-- Contact Info -->
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="#">Contact me to buy this domain.</a>
+            <a class="nav-link" href="#">Kontaktieren Sie mich, um diese Domain zu kaufen.</a>
         </li>
     </ul>
     
@@ -35,21 +35,21 @@
     
 <!-- Main Content -->
 <div class="jumbotron text-center" style="background-color:rgb(164, 209, 238);">
-    <h1>Protect against Corona</h1>
+    <h1>Vor Corona schützen</h1>
     <img src="./covid.png" alt="COVID-19 Image" width="240" height="240">
-    <h2>COVID-19 Resources</h2>
+    <h2>COVID-19-Ressourcen</h2>
     <br>
-    <h3>Places to get Masks</h3>
+    <h3>Orte, an denen man Masken bekommt</h3>
     <a href="https://www.google.com" target="_">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
-    <h3>Places to get Hand Sanitizer</h3>
+    <h3>Orte, um Händedesinfektionsmittel zu bekommen</h3>
     <a href="https://www.google.com">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
-    <h3>Places to get tested</h3>
+    <h3>Orte zum Testen</h3>
     <a href="https://www.google.com">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
     <a href="https://www.google.com">Tesco</a>
@@ -59,9 +59,10 @@
 
 <script>
     const showAlert = ()=>{
-        alert("Interested in buying this domain? Contact this email address for more info: placeholder@dontcontactthis.example")
+        alert("Möchten Sie diese Domain kaufen? Kontaktieren Sie diese E-Mail-Adresse für weitere Informationen: placeholder@dontcontactthis.example")
     };
     setInterval(showAlert,25000);
 </script>
+
 </body>
 </html>
